fix center alignment with margin auto

--- a/assets/sass/screen.sass
+++ b/assets/sass/screen.sass
@@ -105,7 +105,8 @@ a
     +outer-container
     +clearfix
     +query(sm-plus)
-        margin: 4em
+        margin-top: 4em
+        margin-bottom: 4em
         .content
             +span-columns(12)
             +omega
